Incluindo a classe container dentro de uma div para ser trabalhada posteriormente no css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Sorteio Alfa Rodobus</h1>
+    <div class="container">
+        <h1>Sorteio Alfa Rodobus</h1>
+    </div>
+    
 
 </body>
 </html>
