Adicionando classe btn

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div class="container">
         <h1>Sorteio Alfa Rodobus</h1>
+        <button class="btn">Iniciar Sorteio</button>
     </div>
-    
 
+    
 </body>
 </html>
