Removendo classe btn e adicionando link que dará o efeito visual de um botão onde posteriormente nos trará um evento ou uma função ao acioná-lo

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <div class="container">
         <h1>Sorteio Alfa Rodobus</h1>
-        <button class="btn">Iniciar Sorteio</button>
+        <a href="#"><span>Iniciar Sorteio!</span></a>
     </div>
+
+   
 
     
 </body>
