Adicionando a tag script

--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <title>Alfa Rodobus</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+        </style>
 </head>
 <body>
     <div class="container">
         <h1>Sorteio Alfa Rodobus</h1>
-        <a href="#"><span>Iniciar Sorteio!</span></a>
+        <a href="#" id="sortear"><span>Iniciar Sorteio!</span></a>
+        <br>
+        <br>
+        <p id="resultado"></p> 
     </div>
 
-   
-
-    
-</body>
+    <script src="script.js"></script> 
 </html>
